2005-01-11 16:01  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Copy old contents to ftfont-old.m and
	include that file if the freetype version is <2.1.8. Rewrite
	this file to work with freetype >=2.1.8.
	* Source/art/ftfont-old.m: New file.

2004-12-30 18:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/x11/XGDragView.m: _handleDrag: method correction for
	bug#11352 and for fixes to allow compilation with gcc < 3.0.

2004-12-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m  (-standardcursor:): Don't set
	default cursor, when no standard cursor is available.
	* Source/x11/XGServerWindow.m  (-standardcursor:): Don't set
	default cursor, when no standard cursor is available.
	Replaced the usage of the type xgps_cursor_id_t with Cursor
	throughout this file.

2004-12-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m  (-setwindowlevel::): Stop using
	the KDE override atom for window levels. The old behaviour may be
	reactivated via the define USE_KDE_OVERRIDE.

2004-11-28  Matt Rice <ratmice@yahoo.com>

	* Source/x11/XGGLFormat.m (-initWithAttributes:,append,append1): Add 
	missing curly brackets, fix append and append1 macros so they can safely
	be used without curly brackets.
	
2004-11-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m: When run as daemon, re-execute with --no-fork flag
	so that we can work with threading using pth library (default on
	some BSD versions).

2004-11-10 18:41  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XWindowBuffer.m (test_xshm): New function.
	(test_xshm_error_handler): New function.
	(+windowBufferForWindow:depthInfo:): Move XShm detection code
	to test_xshm and use it to decide whether to use XShm or not.
	(+initialize): Move use_xshm setting code to test_xshm.
	(+_gotShmCompletion:): Don't warn if we can't find an XWindowBuffer
	for the event.

2004-11-10  Matt Rice <ratmice@yahoo.com>
